konsole: align to center

--- a/dot_local/share/konsole/private_black.profile.tmpl
+++ b/dot_local/share/konsole/private_black.profile.tmpl
@@ -8,7 +8,7 @@ Command=/bin/zsh
 Directory=~/Desktop
 Name=black
 Parent=FALLBACK/
-TerminalCenter=false
+TerminalCenter=true
 TerminalMargin=0
 
 [Scrolling]
