home-manager: import local config

--- a/private_dot_config/nixpkgs/home.nix.tmpl
+++ b/private_dot_config/nixpkgs/home.nix.tmpl
@@ -1,11 +1,6 @@
 { config, pkgs, ... }:
 
 {
-  programs.neovim = {
-    enable = true;
-    extraConfig = builtins.readFile {{ .chezmoi.homeDir }}/.config/nvim/init.vim;
-  };
-
   # Home Manager needs a bit of information about you and the
   # paths it should manage.
   home.username = "{{ .chezmoi.group }}";
@@ -23,4 +18,9 @@
 
   # Let Home Manager install and manage itself.
   programs.home-manager.enable = true;
+
+  # local config
+  imports = [
+    ./local.nix
+  ];
 }
