--- a/private_dot_config/nixpkgs/home.nix.tmpl
+++ b/private_dot_config/nixpkgs/home.nix.tmpl
@@ -1,19 +1,8 @@
 { config, pkgs, ... }:
 
 {
-  # Home Manager needs a bit of information about you and the
-  # paths it should manage.
   home.username = "{{ .chezmoi.group }}";
   home.homeDirectory = "{{ .chezmoi.homeDir }}";
-
-  # This value determines the Home Manager release that your
-  # configuration is compatible with. This helps avoid breakage
-  # when a new Home Manager release introduces backwards
-  # incompatible changes.
-  #
-  # You can update Home Manager without changing this value. See
-  # the Home Manager release notes for a list of state version
-  # changes in each release.
   home.stateVersion = "22.11";
 
   # Let Home Manager install and manage itself.
@@ -23,4 +12,8 @@
   imports = [
     ./local.nix
   ];
+
+  # https://nix-community.github.io/home-manager/index.html#_why_are_the_session_variables_not_set
+  # if Home Manager doesn't manage shell, add this to shell config
+  # source "$HOME/.nix-profile/etc/profile.d/hm-session-vars.sh"
 }
