hm: add example of local.nix

--- a/private_dot_config/nixpkgs/home.nix.tmpl
+++ b/private_dot_config/nixpkgs/home.nix.tmpl
@@ -10,7 +10,7 @@
 
   # local config
   imports = [
-    ./local.nix
+    ./local.nix # example: imports = [ ./hostname.nix ];
   ];
 
   # https://nix-community.github.io/home-manager/index.html#_why_are_the_session_variables_not_set
