xprofile: only set Fcitx 5 for magicbook14

--- a/dot_xprofile.tmpl
+++ b/dot_xprofile.tmpl
@@ -1,4 +1,6 @@
+{{ if eq .chezmoi.hostname "magicbook14" -}}
 export GTK_IM_MODULE=fcitx
 export QT_IM_MODULE=fcitx
 export XMODIFIERS=@im=fcitx
 # gsettings set org.gnome.settings-daemon.plugins.xsettings overrides "{'Gtk/IMModule':<'fcitx'>}"
+{{- end }}
