--- a/dot_local/share/konsole/private_black.profile.tmpl
+++ b/dot_local/share/konsole/private_black.profile.tmpl
@@ -1,4 +1,6 @@
 [Appearance]
+AntiAliasFonts=true
+BoldIntense=true
 ColorScheme=Breeze
 Font=Cascadia Mono PL,13,-1,5,50,0,0,0,0,0
 UseFontLineChararacters=true
